--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,35 +18,30 @@ services:
     environment:
       - AIRFLOW_HOME=/usr/local/airflow
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
-      - AIRFLOW__LOGGING__BASE_LOG_FOLDER=/usr/local/airflow/mylogs
-      - AIRFLOW__CORE__BASE_LOG_FOLDER=/usr/local/airflow/mylogs
-      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
-      - AIRFLOW__SCHEDULER__CHILD_PROCESS_LOG_DIRECTORY=/usr/local/airflow/mylogs
+      - AIRFLOW__SCHEDULER__CHILD_PROCESS_LOG_DIRECTORY=/usr/local/airflow/mylogs # this is the key
     depends_on:
       - postgres
 
   webserver:
     build: .
     # restart: always
-    links: 
-      - postgres
     depends_on:
       - postgres
     volumes:
-      - my_test_volume:/usr/local/airflow/mydags
-      - $PWD/airflow/logs:/usr/local/airflow/logs
+      - $PWD/airflow/logs:/usr/local/airflow/logs/scheduler
     ports:
       - "8080:8080"
     environment:
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
       - AIRFLOW__CORE__UNIT_TEST_MODE=False
-      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=False
-      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
-      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW_HOME=/usr/local/airflow
-      - AIRFLOW__CORE__DAGS_FOLDER=/usr/local/airflow/mydags
-      - AIRFLOW__SCHEDULER__CHILD_PROCESS_LOG_DIRECTORY=/usr/local/airflow/mylogs
       - AIRFLOW__CORE__BASE_LOG_FOLDER=/usr/local/airflow/mylogs
+      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=False
+      - AIRFLOW__CORE__PARALLELISM=4
+      - AIRFLOW__CORE__DAG_CONCURRENCY=4
+      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+      - AIRFLOW__SCHEDULER__CHILD_PROCESS_LOG_DIRECTORY=/usr/local/airflow/mylogs # this is key
     entrypoint: airflow webserver
     healthcheck:
       test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]"]
@@ -56,24 +51,19 @@ services:
 
   scheduler:
     build: .
-    restart: always
+    # restart: always
     depends_on:
-      - postgres
-    volumes:
-      - my_test_volume:/usr/local/airflow/mydags
-      - $PWD/airflow/logs:/usr/local/airflow/logs
-    entrypoint: airflow scheduler
+      - webserver
     environment:
-      - AIRFLOW__CORE__LOAD_EXAMPLES=False
-      - AIRFLOW__CORE__UNIT_TEST_MODE=False
-      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
-      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=False
-      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+      - CONFIG_PROCESSOR_MANAGER_LOGGER=False
       - AIRFLOW_HOME=/usr/local/airflow
+      - AIRFLOW__CORE__DAGS_FOLDER=/usr/local/airflow/mydags
+      - AIRFLOW__SCHEDULER__CATCHUP_BY_DEFAULT=False
+      - AIRFLOW__SCHEDULER__DAG_DIR_LIST_INTERVAL=60
       - AIRFLOW__LOGGING__BASE_LOG_FOLDER=/usr/local/airflow/mylogs
       - AIRFLOW__SCHEDULER__CHILD_PROCESS_LOG_DIRECTORY=/usr/local/airflow/mylogs
-      - AIRFLOW__CORE__BASE_LOG_FOLDER=/usr/local/airflow/mylogs
-      - AIRFLOW__CORE__DAGS_FOLDER=/usr/local/airflow/mydags
+      - AIRFLOW__LOGGING__DAG_PROCESSOR_MANAGER_LOG_LOCATION=/usr/local/airflow/mylogs      
+    entrypoint: airflow scheduler
     healthcheck:
       test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-scheduler.pid ]"]
       interval: 30s
@@ -85,5 +75,5 @@ volumes:
     driver_opts:
        o: bind
        type: none
-       device: /home/me/airflow/dags
+       device: /home/psweatte/airflow/dags
   my_dag_log_volume:
